dnstroubleshooting/k8s-0-worker-iptables.txt
# Generated by iptables-save v1.8.7 on Wed Apr 13 20:44:23 2022
*raw
:PREROUTING ACCEPT [190896:182605672]
:OUTPUT ACCEPT [77594:32551996]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:mPIOOWmbH3iO0R90" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:8eOxmFpkWr0RjKXR" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:F-nExspj_POyei0v" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Wed Apr 13 20:44:23 2022
# Generated by iptables-save v1.8.7 on Wed Apr 13 20:44:23 2022
*mangle
:PREROUTING ACCEPT [15124:1542079]
:INPUT ACCEPT [77395:152623081]
:FORWARD ACCEPT [113501:29982591]
:OUTPUT ACCEPT [77594:32551996]
:POSTROUTING ACCEPT [189973:62467267]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:nnqPh8lh2VOogSzX" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:nquN8Jw8Tz72pcBW" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:jWrgvDQ0xEZHmta3" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Wed Apr 13 20:44:23 2022
# Generated by iptables-save v1.8.7 on Wed Apr 13 20:44:23 2022
*filter
:INPUT ACCEPT [187:39734]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [218:66170]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali2d68f284945 - [0:0]
:cali-fw-cali3d84b5a2fc6 - [0:0]
:cali-fw-cali7a2cf961674 - [0:0]
:cali-fw-cali9c8e97df655 - [0:0]
:cali-fw-calia4d70ea4958 - [0:0]
:cali-pi-_3CJ_GmvE9pcCktVJ2ep - [0:0]
:cali-pri-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pri-_Fbc9Uzqla4kSgumjTb - [0:0]
:cali-pri-_NB9zZ6CLqAwN85RObG - [0:0]
:cali-pri-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-_ysQxeMvsC8GgpWoJtn - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.ingress-apisix - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pro-_Fbc9Uzqla4kSgumjTb - [0:0]
:cali-pro-_NB9zZ6CLqAwN85RObG - [0:0]
:cali-pro-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-_ysQxeMvsC8GgpWoJtn - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.ingress-apisix - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali2d68f284945 - [0:0]
:cali-tw-cali3d84b5a2fc6 - [0:0]
:cali-tw-cali7a2cf961674 - [0:0]
:cali-tw-cali9c8e97df655 - [0:0]
:cali-tw-calia4d70ea4958 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.96.42.53/32 -p tcp -m comment --comment "ingress-apisix/apisix-ingress-controller:http has no endpoints" -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:NOSxoaGx8OIstr1z" -j cali-cidr-block
-A cali-INPUT -p udp -m comment --comment "cali:w7ud0UgQSEi_zKuQ" -m comment --comment "Allow VXLAN packets from whitelisted hosts" -m multiport --dports 4789 -m set --match-set cali40all-vxlan-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p udp -m comment --comment "cali:4cgmbdWsLmozYhJh" -m comment --comment "Drop VXLAN packets from non-whitelisted hosts" -m multiport --dports 4789 -m addrtype --dst-type LOCAL -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:t45BUBhpu3Wsmi1_" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:NOmsycyknYZaGOFf" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:Or0B7eoenKO2p8Bf" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:AmIfvPGG2lYUK6mj" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:79fWWn1SpufdO7SE" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p udp -m comment --comment "cali:R_U4Bsx2wPE7s0j6" -m comment --comment "Allow VXLAN packets to other whitelisted hosts" -m multiport --dports 4789 -m addrtype --src-type LOCAL -m set --match-set cali40all-vxlan-net dst -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:tQyQykplzpOIOeFr" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:teLcuBv_-wX6Mf5Z" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:5wMpugAuGXHkWBaX" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-wl-dispatch -i cali2d68f284945 -m comment --comment "cali:8pfrm28gmY1tIjP1" -g cali-fw-cali2d68f284945
-A cali-from-wl-dispatch -i cali3d84b5a2fc6 -m comment --comment "cali:eWtuRP2n4oCamh4v" -g cali-fw-cali3d84b5a2fc6
-A cali-from-wl-dispatch -i cali7a2cf961674 -m comment --comment "cali:28sGfY8mSxjwDCk1" -g cali-fw-cali7a2cf961674
-A cali-from-wl-dispatch -i cali9c8e97df655 -m comment --comment "cali:6W0mb7Zk1dEcYBxY" -g cali-fw-cali9c8e97df655
-A cali-from-wl-dispatch -i calia4d70ea4958 -m comment --comment "cali:4yMKJsxJDySOSp8N" -g cali-fw-calia4d70ea4958
-A cali-from-wl-dispatch -m comment --comment "cali:SCBkPWQOcP9wZJIr" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali2d68f284945 -m comment --comment "cali:sdC_IaxzwxaTAc50" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali2d68f284945 -m comment --comment "cali:BbD1ehO8mgZwn9we" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali2d68f284945 -m comment --comment "cali:fn_XQ7lddAFo6kU5" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali2d68f284945 -p udp -m comment --comment "cali:pyHy8gtGI6ttn_Po" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali2d68f284945 -p ipencap -m comment --comment "cali:USJIoym-_Sd5zIzH" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali2d68f284945 -m comment --comment "cali:DRKRBr5EIs8wDBI6" -j cali-pro-_Fbc9Uzqla4kSgumjTb
-A cali-fw-cali2d68f284945 -m comment --comment "cali:6W79YezMKoSNDaAg" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali2d68f284945 -m comment --comment "cali:FnxM9OiN92kkK41Y" -j cali-pro-_NB9zZ6CLqAwN85RObG
-A cali-fw-cali2d68f284945 -m comment --comment "cali:R6Km_N3zQbMml4B1" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali2d68f284945 -m comment --comment "cali:Kf3YPaxKOXdu1YnP" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:KYd6KFEF80Wts3Jx" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:d7j9sKSiKciyF7KB" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:O5tc5MqAyxoBDQda" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali3d84b5a2fc6 -p udp -m comment --comment "cali:jnFCxqzlgrJ3hhwz" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali3d84b5a2fc6 -p ipencap -m comment --comment "cali:dIZC7eBh-ixSESK_" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:CLwh9ibJChPEIUs1" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:eHn0keIByhzwpxIV" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:K7DDs0IdhaRHrBz8" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:_yyLXCLeu_e5-86g" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali3d84b5a2fc6 -m comment --comment "cali:EDNX31jyZEq1QQZl" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:z-R5mbloIpojt-10" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:-PuqWeq-X9JL8maY" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:siZIwm2NZxZ6UOhq" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali7a2cf961674 -p udp -m comment --comment "cali:4MnHPcHF-o5h5dav" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali7a2cf961674 -p ipencap -m comment --comment "cali:VqdQY4lhcRLfpyvO" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:-n_nB56PFOn-E9mC" -j cali-pro-kns.calico-system
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:BbiL75UQJNPk79Nu" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:PRka5maIuqJ2pCxH" -j cali-pro-_nzzjLvInId1gPHmQz_
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:-WMWANS_XHHRFBoo" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali7a2cf961674 -m comment --comment "cali:NfQKfTOjPXbO6QHg" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:dtOAooxLxeDrBtq3" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:TV7vhiuMq8x34sGy" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:CKoUTZ3FbK819bcB" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali9c8e97df655 -p udp -m comment --comment "cali:09sHAE_tau6hbhrb" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali9c8e97df655 -p ipencap -m comment --comment "cali:TK9p56cbJUnDrct9" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:UiO_z7kGfnLTbF5a" -j cali-pro-kns.kube-system
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:Yv5g4mC3lrhMMKxP" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:4QNqIA3DAvj6mFJa" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:tsdzIOeu0cQlQkX7" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali9c8e97df655 -m comment --comment "cali:rFZ5jYaxazaLsP5-" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:I1vsIzg0zx0TrU6f" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:xtKtqrWMvZIrnWP0" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:7svxTcRQniACZRx_" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calia4d70ea4958 -p udp -m comment --comment "cali:UVjVV15BwILuJH1Z" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calia4d70ea4958 -p ipencap -m comment --comment "cali:BwOeFmw1Y9H6ZV2Z" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:9zmOKcm7gyOkCWR6" -j cali-pro-kns.ingress-apisix
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:suqwy_cmNdHJwi98" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:AU2nm-rzghT4LDic" -j cali-pro-_ysQxeMvsC8GgpWoJtn
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:-Mfre4THg5nGCCgV" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calia4d70ea4958 -m comment --comment "cali:0_Y8sF4okDaigaSG" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -p tcp -m comment --comment "cali:I0yo8ky1YADcMXRf" -m comment --comment "Policy calico-apiserver/knp.default.allow-apiserver ingress" -m multiport --dports 5443 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -m comment --comment "cali:vcoXnuptt0fs1M8q" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:ZYnaZZFwsSjfXO4C" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver ingress"
-A cali-pri-_Fbc9Uzqla4kSgumjTb -m comment --comment "cali:mhJJBkogVZsmcFYT" -m comment --comment "Profile kns.local-path-storage ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_Fbc9Uzqla4kSgumjTb -m comment --comment "cali:5dsuZCaL1po2QneY" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_NB9zZ6CLqAwN85RObG -m comment --comment "cali:ql_I1PveGKMGBb3y" -m comment --comment "Profile ksa.local-path-storage.local-path-provisioner-service-account ingress"
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:IQx0SzlDGn6BPv0A" -m comment --comment "Profile kns.calico-apiserver ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:hnAzdaRiFbG1YPHK" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:UQoEf2WCdU0bPTCb" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers ingress"
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-_ysQxeMvsC8GgpWoJtn -m comment --comment "cali:QW6cG4_oDVYugaKG" -m comment --comment "Profile ksa.ingress-apisix.apisix-ingress-controller ingress"
-A cali-pri-kns.calico-system -m comment --comment "cali:hLANj-OVIyT53h_j" -m comment --comment "Profile kns.calico-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.calico-system -m comment --comment "cali:AHts2xleddEc04Gr" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.ingress-apisix -m comment --comment "cali:7Iy-4i8VszIHtS39" -m comment --comment "Profile kns.ingress-apisix ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.ingress-apisix -m comment --comment "cali:kW9654_8ZUWMF_T7" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:Pp_dQp2FeNabRhyi" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver egress"
-A cali-pro-_Fbc9Uzqla4kSgumjTb -m comment --comment "cali:_jJcYdM5caQ3bH9X" -m comment --comment "Profile kns.local-path-storage egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_Fbc9Uzqla4kSgumjTb -m comment --comment "cali:DqonQV8pXLEY1pl3" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_NB9zZ6CLqAwN85RObG -m comment --comment "cali:7x9KFvwtPTTLg4p3" -m comment --comment "Profile ksa.local-path-storage.local-path-provisioner-service-account egress"
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:_cFTxC141wwWRzyZ" -m comment --comment "Profile kns.calico-apiserver egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:dvDa77rVzpVqK7ZF" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:5bHxBXLMkJKgC6dk" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers egress"
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-_ysQxeMvsC8GgpWoJtn -m comment --comment "cali:5xzZ-avEFsWwcq2H" -m comment --comment "Profile ksa.ingress-apisix.apisix-ingress-controller egress"
-A cali-pro-kns.calico-system -m comment --comment "cali:gWxJzCZXxl31NR0P" -m comment --comment "Profile kns.calico-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.calico-system -m comment --comment "cali:rHIqpX_kWRu4q0wP" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.ingress-apisix -m comment --comment "cali:0CuOA0GFLoyP4eL_" -m comment --comment "Profile kns.ingress-apisix egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.ingress-apisix -m comment --comment "cali:xCSi303-NfJGl4im" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali2d68f284945 -m comment --comment "cali:1ReJORI_SHGpz2kw" -g cali-tw-cali2d68f284945
-A cali-to-wl-dispatch -o cali3d84b5a2fc6 -m comment --comment "cali:KBmU4ri6BHFvJiJV" -g cali-tw-cali3d84b5a2fc6
-A cali-to-wl-dispatch -o cali7a2cf961674 -m comment --comment "cali:D0ko-Ne8V1KF7hZA" -g cali-tw-cali7a2cf961674
-A cali-to-wl-dispatch -o cali9c8e97df655 -m comment --comment "cali:CP4i_83acpRkeXCW" -g cali-tw-cali9c8e97df655
-A cali-to-wl-dispatch -o calia4d70ea4958 -m comment --comment "cali:YA-n-Qn5IiNNZft4" -g cali-tw-calia4d70ea4958
-A cali-to-wl-dispatch -m comment --comment "cali:RVyRrPgpXFxX5To8" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali2d68f284945 -m comment --comment "cali:FZLyaPVLeNFlKUxy" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali2d68f284945 -m comment --comment "cali:JMzUlwzoEhd2mWDB" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali2d68f284945 -m comment --comment "cali:mJkLzat8Vf-Ty70f" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali2d68f284945 -m comment --comment "cali:x1at0b7piWVV26dA" -j cali-pri-_Fbc9Uzqla4kSgumjTb
-A cali-tw-cali2d68f284945 -m comment --comment "cali:DuQHwJokH6WOIkji" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali2d68f284945 -m comment --comment "cali:ERtfix7pE6BZwHFQ" -j cali-pri-_NB9zZ6CLqAwN85RObG
-A cali-tw-cali2d68f284945 -m comment --comment "cali:hdnM-Wo7zeH7SFuu" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali2d68f284945 -m comment --comment "cali:L467tmUjtTpi21XM" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:EEISPiglNB-yFvSL" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:LnvmjuNDzZ-0EYsR" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:qhnrbJeKm0P2CUJ6" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:p1Z9kmjVtvrcsp0t" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:E4uKT9XHwXRDNtar" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:tmYe-EO7RDaSOZqj" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:ZWV0AzPx580WiLWl" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:e8KuQShGhJ3PRonM" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:j0jCYyKt4YjemG-F" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:6l91aRD8w6ItSKy0" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:5CrwzKlzqzb4-6DI" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali3d84b5a2fc6 -m comment --comment "cali:pRe72hDO-kGTd4Nx" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:mrSupbyzeuikShwb" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:VLsqN4AuVeEMglgw" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:YF5k0B4MiRoncdHQ" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:3MUJne1mUcQDgoRT" -j cali-pri-kns.calico-system
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:r6ja_4Vwwz3wxeQW" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:0gbG1R_cYO4veZ05" -j cali-pri-_nzzjLvInId1gPHmQz_
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:P3ndxgmTjY3HiJiJ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali7a2cf961674 -m comment --comment "cali:Dgz6uD69IFNZ5tO6" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:xGJ9MdpjU8MSUgFM" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:DaKqypcol7RBqH1C" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:mGVpO4Xhgq4Z4Avr" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:GL4fvsjZUsRs2fU_" -j cali-pri-kns.kube-system
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:sLhtmYUfT947SjQQ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:GgMKVTLEXFu2uXK3" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:j39hAEbA5p1_LEr_" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali9c8e97df655 -m comment --comment "cali:Ns2C1JNSHaM_ZZRP" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:HY2BUvIjqucpT4LS" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:NyYOCXRl5CYW-DkV" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:cHw35jTimDqiob49" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:bWB1zyndW02PTB5i" -j cali-pri-kns.ingress-apisix
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:MUhP0Aiz__CfKv0R" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:7G7Iuuk_98ZMbC1i" -j cali-pri-_ysQxeMvsC8GgpWoJtn
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:dBuXZC_lJT7kC6S1" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calia4d70ea4958 -m comment --comment "cali:BRtM6Pyy6oeHUEny" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Wed Apr 13 20:44:23 2022
# Generated by iptables-save v1.8.7 on Wed Apr 13 20:44:23 2022
*nat
:PREROUTING ACCEPT [12253:1333012]
:INPUT ACCEPT [27:2025]
:OUTPUT ACCEPT [3692:222061]
:POSTROUTING ACCEPT [15958:1591141]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2QONDKIULVHM7OQJ - [0:0]
:KUBE-SEP-2TEPULJWQKF3FWR4 - [0:0]
:KUBE-SEP-3TO5ASH7UZY4EXNC - [0:0]
:KUBE-SEP-72IYG7FIM5XEXTD2 - [0:0]
:KUBE-SEP-75SAH5ZH25RKFBBZ - [0:0]
:KUBE-SEP-C2W4I2CL7ESFRSGW - [0:0]
:KUBE-SEP-C3P5HYMKY774BD25 - [0:0]
:KUBE-SEP-DGKDCMCRSERIQEH3 - [0:0]
:KUBE-SEP-DM2KGNVEM6RELE3W - [0:0]
:KUBE-SEP-DYYAACGKTKXCYJOU - [0:0]
:KUBE-SEP-FH5CJIFNP72H7LYF - [0:0]
:KUBE-SEP-GIMTK3BWC7VJ5HAT - [0:0]
:KUBE-SEP-IG4VFRB4X4DWXYDK - [0:0]
:KUBE-SEP-JH7NTHL2HKWCRRVQ - [0:0]
:KUBE-SEP-NN4RQASSXM4UGOTY - [0:0]
:KUBE-SEP-QKX4QX54UKWK6JIY - [0:0]
:KUBE-SEP-QOG64LIH5OBDGSI6 - [0:0]
:KUBE-SEP-WSDQQLEFWVU6BY73 - [0:0]
:KUBE-SEP-YOCL3F57DIFUXMO5 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-2RVHRPU2UIFFE347 - [0:0]
:KUBE-SVC-32JVTH6QXNL4MJ6I - [0:0]
:KUBE-SVC-AWA2CQSXVI7X2GE5 - [0:0]
:KUBE-SVC-CEZPIJSAUFW5MYPQ - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-FFPQDOYVPSGJXKDK - [0:0]
:KUBE-SVC-GRVIJZ6QHJZF73YT - [0:0]
:KUBE-SVC-I24EZXP75AX5E7TU - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-KQVGIOWQAVNMB2ZL - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-Z6GDYMWE5TV2NNJN - [0:0]
:KUBE-SVC-ZNPCTIRB7RFNITAF - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -d 172.18.0.1/32 -j DOCKER_OUTPUT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -d 172.18.0.1/32 -j DOCKER_OUTPUT
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -d 172.18.0.1/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 172.18.0.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:42691
-A DOCKER_OUTPUT -d 172.18.0.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:37955
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 42691 -j SNAT --to-source 172.18.0.1:53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 37955 -j SNAT --to-source 172.18.0.1:53
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2QONDKIULVHM7OQJ -s 10.244.206.139/32 -m comment --comment "monitoring/prometheus-adapter:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-2QONDKIULVHM7OQJ -p tcp -m comment --comment "monitoring/prometheus-adapter:https" -m tcp -j DNAT --to-destination 10.244.206.139:6443
-A KUBE-SEP-2TEPULJWQKF3FWR4 -s 10.244.206.129/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2TEPULJWQKF3FWR4 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.206.129:53
-A KUBE-SEP-3TO5ASH7UZY4EXNC -s 10.244.206.133/32 -m comment --comment "monitoring/blackbox-exporter:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-3TO5ASH7UZY4EXNC -p tcp -m comment --comment "monitoring/blackbox-exporter:https" -m tcp -j DNAT --to-destination 10.244.206.133:9115
-A KUBE-SEP-72IYG7FIM5XEXTD2 -s 172.18.0.3/32 -m comment --comment "kube-system/kube-controller-manager:https-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-72IYG7FIM5XEXTD2 -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics" -m tcp -j DNAT --to-destination 172.18.0.3:10259
-A KUBE-SEP-75SAH5ZH25RKFBBZ -s 10.244.245.69/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-75SAH5ZH25RKFBBZ -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 10.244.245.69:5443
-A KUBE-SEP-C2W4I2CL7ESFRSGW -s 172.18.0.3/32 -m comment --comment "kube-system/kube-scheduler:https-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-C2W4I2CL7ESFRSGW -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics" -m tcp -j DNAT --to-destination 172.18.0.3:10259
-A KUBE-SEP-C3P5HYMKY774BD25 -s 10.244.245.68/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-C3P5HYMKY774BD25 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.245.68:53
-A KUBE-SEP-DGKDCMCRSERIQEH3 -s 10.244.206.130/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-DGKDCMCRSERIQEH3 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 10.244.206.130:5443
-A KUBE-SEP-DM2KGNVEM6RELE3W -s 10.244.245.68/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-DM2KGNVEM6RELE3W -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.245.68:53
-A KUBE-SEP-DYYAACGKTKXCYJOU -s 172.18.0.3/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-DYYAACGKTKXCYJOU -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 172.18.0.3:5473
-A KUBE-SEP-FH5CJIFNP72H7LYF -s 10.244.206.131/32 -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -j KUBE-MARK-MASQ
-A KUBE-SEP-FH5CJIFNP72H7LYF -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -m tcp -j DNAT --to-destination 10.244.206.131:8443
-A KUBE-SEP-GIMTK3BWC7VJ5HAT -s 10.244.206.133/32 -m comment --comment "monitoring/blackbox-exporter:probe" -j KUBE-MARK-MASQ
-A KUBE-SEP-GIMTK3BWC7VJ5HAT -p tcp -m comment --comment "monitoring/blackbox-exporter:probe" -m tcp -j DNAT --to-destination 10.244.206.133:19115
-A KUBE-SEP-IG4VFRB4X4DWXYDK -s 10.244.206.129/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-IG4VFRB4X4DWXYDK -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.206.129:53
-A KUBE-SEP-JH7NTHL2HKWCRRVQ -s 10.244.245.65/32 -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -j KUBE-MARK-MASQ
-A KUBE-SEP-JH7NTHL2HKWCRRVQ -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -m tcp -j DNAT --to-destination 10.244.245.65:9094
-A KUBE-SEP-NN4RQASSXM4UGOTY -s 10.244.206.132/32 -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -j KUBE-MARK-MASQ
-A KUBE-SEP-NN4RQASSXM4UGOTY -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -m tcp -j DNAT --to-destination 10.244.206.132:8000
-A KUBE-SEP-QKX4QX54UKWK6JIY -s 172.18.0.3/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-QKX4QX54UKWK6JIY -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.18.0.3:6443
-A KUBE-SEP-QOG64LIH5OBDGSI6 -s 10.244.206.129/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-QOG64LIH5OBDGSI6 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.206.129:9153
-A KUBE-SEP-WSDQQLEFWVU6BY73 -s 10.244.206.140/32 -m comment --comment "monitoring/grafana:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-WSDQQLEFWVU6BY73 -p tcp -m comment --comment "monitoring/grafana:http" -m tcp -j DNAT --to-destination 10.244.206.140:3000
-A KUBE-SEP-YOCL3F57DIFUXMO5 -s 10.244.245.68/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-YOCL3F57DIFUXMO5 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.245.68:9153
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.181.13/32 -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard cluster IP" -m tcp --dport 443 -j KUBE-SVC-CEZPIJSAUFW5MYPQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.179.243/32 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver cluster IP" -m tcp --dport 443 -j KUBE-SVC-I24EZXP75AX5E7TU
-A KUBE-SERVICES -d 10.96.200.115/32 -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-SVC-FFPQDOYVPSGJXKDK
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 10.96.83.237/32 -p tcp -m comment --comment "monitoring/blackbox-exporter:probe cluster IP" -m tcp --dport 19115 -j KUBE-SVC-ZNPCTIRB7RFNITAF
-A KUBE-SERVICES -d 10.96.93.93/32 -p tcp -m comment --comment "monitoring/prometheus-adapter:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-GRVIJZ6QHJZF73YT
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.96.175.188/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-SVC-RK657RLKDNVNU64O
-A KUBE-SERVICES -d 10.96.162.122/32 -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port cluster IP" -m tcp --dport 9094 -j KUBE-SVC-KQVGIOWQAVNMB2ZL
-A KUBE-SERVICES -d 10.96.95.37/32 -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper cluster IP" -m tcp --dport 8000 -j KUBE-SVC-Z6GDYMWE5TV2NNJN
-A KUBE-SERVICES -d 10.96.83.237/32 -p tcp -m comment --comment "monitoring/blackbox-exporter:https cluster IP" -m tcp --dport 9115 -j KUBE-SVC-32JVTH6QXNL4MJ6I
-A KUBE-SERVICES -d 10.96.109.215/32 -p tcp -m comment --comment "monitoring/grafana:http cluster IP" -m tcp --dport 3000 -j KUBE-SVC-AWA2CQSXVI7X2GE5
-A KUBE-SERVICES -d 10.96.251.122/32 -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-SVC-2RVHRPU2UIFFE347
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-2RVHRPU2UIFFE347 ! -s 10.244.0.0/16 -d 10.96.251.122/32 -p tcp -m comment --comment "kube-system/kube-controller-manager:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-MARK-MASQ
-A KUBE-SVC-2RVHRPU2UIFFE347 -m comment --comment "kube-system/kube-controller-manager:https-metrics" -j KUBE-SEP-72IYG7FIM5XEXTD2
-A KUBE-SVC-32JVTH6QXNL4MJ6I ! -s 10.244.0.0/16 -d 10.96.83.237/32 -p tcp -m comment --comment "monitoring/blackbox-exporter:https cluster IP" -m tcp --dport 9115 -j KUBE-MARK-MASQ
-A KUBE-SVC-32JVTH6QXNL4MJ6I -m comment --comment "monitoring/blackbox-exporter:https" -j KUBE-SEP-3TO5ASH7UZY4EXNC
-A KUBE-SVC-AWA2CQSXVI7X2GE5 ! -s 10.244.0.0/16 -d 10.96.109.215/32 -p tcp -m comment --comment "monitoring/grafana:http cluster IP" -m tcp --dport 3000 -j KUBE-MARK-MASQ
-A KUBE-SVC-AWA2CQSXVI7X2GE5 -m comment --comment "monitoring/grafana:http" -j KUBE-SEP-WSDQQLEFWVU6BY73
-A KUBE-SVC-CEZPIJSAUFW5MYPQ ! -s 10.244.0.0/16 -d 10.96.181.13/32 -p tcp -m comment --comment "kubernetes-dashboard/kubernetes-dashboard cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-CEZPIJSAUFW5MYPQ -m comment --comment "kubernetes-dashboard/kubernetes-dashboard" -j KUBE-SEP-FH5CJIFNP72H7LYF
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-2TEPULJWQKF3FWR4
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-C3P5HYMKY774BD25
-A KUBE-SVC-FFPQDOYVPSGJXKDK ! -s 10.244.0.0/16 -d 10.96.200.115/32 -p tcp -m comment --comment "kube-system/kube-scheduler:https-metrics cluster IP" -m tcp --dport 10259 -j KUBE-MARK-MASQ
-A KUBE-SVC-FFPQDOYVPSGJXKDK -m comment --comment "kube-system/kube-scheduler:https-metrics" -j KUBE-SEP-C2W4I2CL7ESFRSGW
-A KUBE-SVC-GRVIJZ6QHJZF73YT ! -s 10.244.0.0/16 -d 10.96.93.93/32 -p tcp -m comment --comment "monitoring/prometheus-adapter:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-GRVIJZ6QHJZF73YT -m comment --comment "monitoring/prometheus-adapter:https" -j KUBE-SEP-2QONDKIULVHM7OQJ
-A KUBE-SVC-I24EZXP75AX5E7TU ! -s 10.244.0.0/16 -d 10.96.179.243/32 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-DGKDCMCRSERIQEH3
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-SEP-75SAH5ZH25RKFBBZ
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-QOG64LIH5OBDGSI6
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-SEP-YOCL3F57DIFUXMO5
-A KUBE-SVC-KQVGIOWQAVNMB2ZL ! -s 10.244.0.0/16 -d 10.96.162.122/32 -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port cluster IP" -m tcp --dport 9094 -j KUBE-MARK-MASQ
-A KUBE-SVC-KQVGIOWQAVNMB2ZL -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -j KUBE-SEP-JH7NTHL2HKWCRRVQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-QKX4QX54UKWK6JIY
-A KUBE-SVC-RK657RLKDNVNU64O ! -s 10.244.0.0/16 -d 10.96.175.188/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-MARK-MASQ
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-SEP-DYYAACGKTKXCYJOU
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-IG4VFRB4X4DWXYDK
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-DM2KGNVEM6RELE3W
-A KUBE-SVC-Z6GDYMWE5TV2NNJN ! -s 10.244.0.0/16 -d 10.96.95.37/32 -p tcp -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper cluster IP" -m tcp --dport 8000 -j KUBE-MARK-MASQ
-A KUBE-SVC-Z6GDYMWE5TV2NNJN -m comment --comment "kubernetes-dashboard/dashboard-metrics-scraper" -j KUBE-SEP-NN4RQASSXM4UGOTY
-A KUBE-SVC-ZNPCTIRB7RFNITAF ! -s 10.244.0.0/16 -d 10.96.83.237/32 -p tcp -m comment --comment "monitoring/blackbox-exporter:probe cluster IP" -m tcp --dport 19115 -j KUBE-MARK-MASQ
-A KUBE-SVC-ZNPCTIRB7RFNITAF -m comment --comment "monitoring/blackbox-exporter:probe" -j KUBE-SEP-GIMTK3BWC7VJ5HAT
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o vxlan.calico -m comment --comment "cali:e9dnSgSVNmIcpVhP" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Wed Apr 13 20:44:23 2022
